--- a/src/global.css
+++ b/src/global.css
@@ -3,5 +3,9 @@
 @tailwind utilities;
 
 body {
-  @apply bg-[#09090A] text-zinc-100;
+  @apply bg-[#09090A] text-zinc-800 dark:text-zinc-100;
+}
+
+.border-spacing {
+  border-spacing: 0 .5rem;
 }
